# youtube-playlist-randomizer

./: .air.toml  .gitignore  .releaserc.yaml  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  go.mod  go.sum  main.go  main_test.go  package-lock.json  package.json  playwright.config.ts  pyproject.toml  renovate.json  requirements.txt  store.go  tox.ini  tsconfig.json  youtube.go
.github/workflows/: cd.yaml  ci.yaml  ci.yml  release.yaml  renovate.yml  stale-branches.yaml  stale-branches.yml
cmd/playlist-randomizer/: main.go
e2e/: app.spec.ts
internal/admin/: handlers.go  handlers_test.go
internal/admin/templates/: logs.gohtml  settings.gohtml
internal/gotify/: gotify.go  gotify_test.go
internal/handlers/: auth.go  handler.go  handler_test.go  job.go  playlist.go  quota.go  randomize.go
internal/handlers/templates/: auth.gohtml  job.gohtml  modal.gohtml  playlist.gohtml  quota.gohtml
internal/job/: job.go  job_test.go
internal/logging/: logger.go
internal/models/: playlist.go  playlist_test.go  playlistitem.go  playlistitem_test.go
internal/randomizer/: randomizer.go  randomizer_test.go  stdin_prompter.go
internal/store/: store.go  store_test.go
internal/telemetry/: dbquery.go  middleware.go  telemetry.go  telemetry_test.go
internal/youtube/: client.go  client_test.go
openspec/changes/add-otel-support/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/central-logging/: design.md  proposal.md  tasks.md
openspec/changes/central-logging/specs/admin-panel/: spec.md
openspec/changes/central-logging/specs/app-settings/: spec.md
openspec/changes/central-logging/specs/central-logging/: spec.md
openspec/changes/central-logging/specs/log-viewer/: spec.md
openspec/changes/central-logging/specs/settings-ai/: spec.md
openspec/changes/central-logging/specs/settings-email/: spec.md
openspec/changes/self-hosted-umami-analytics/: design.md  proposal.md  tasks.md
openspec/changes/self-hosted-umami-analytics/specs/umami-analytics-admin/: spec.md
static/: index.html  manifest.json  style.css  sw.js  swagger.json
static/js/: app.js  app.js.map
templates/: base.html  error.html  index.html
tests/units/: test_playlist.py  test_playlistitem.py  test_randomizer.py
ts/: app.ts
youtube_playlist_randomizer/: __init__.py  arg_parser.py  auth.py  get_playlist.py  main.py  playlist.py  playlistitem.py  randomizer.py
