[tool.poetry]
name = "youtube-playlist-randomizer"
version = "0.4.2"
description = "A tool to randomize youtube playlists"
authors = ["Martyn van Dijke <martijnvdijke600@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_playlist_randomizer"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.136.0"
prompt-toolkit2 = "^2.0.11"
google-auth-oauthlib = "^1.2.0"
prompt-toolkit = "^3.0.47"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^7.4.4"
ruff = "^0.4.10"
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-playlist-randomizer = 'youtube_playlist_randomizer.main:main'
ypr = 'youtube_playlist_randomizer.main:main'