[tool.poetry]
name = "youtube-playlist-randomizer"
version = "0.4.2"
description = "A tool to randomize youtube playlists"
authors = ["Martyn van Dijke <martijnvdijke600@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_playlist_randomizer"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "1.7.2"
google-auth = "2.14.1"
google-auth-httplib2 = "0.0.3"
google-auth-oauthlib = "0.4.1"
prompt-toolkit2 = "^2.0.11"
prompt-toolkit = "^3.0.51"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pytest = "^7.4.4"
poetry = "^1.8.5"
ruff = "^0.12.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
youtube-playlist-randomizer = 'youtube_playlist_randomizer.main:main'
ypr = 'youtube_playlist_randomizer.main:main'